[tool.poetry]
name = "ilrl"
version = "0.1.0"
description = ""
authors = ["Raghava Uppuluri <raghava.upp13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robohive = "^0.6.0"
hydra-core = "^0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
